tests/fixtures/invalid/divmod_3_args.py
# divmod() takes at most 2 arguments, got 3
x = divmod(1, 1, 1)
